Add output directory to gitignore while preserving structure

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,8 @@ quarantine_backup/
 coverage.xml
 htmlcov/
 *.bak
+
+# Ignore output directory content but preserve directory structure
+output/**/*
+!output/**/
+!output/**/.gitkeep
