fix: pytest test_full_pipeline.py

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -306,8 +306,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
+          driver: docker-container
           buildkitd-flags: --debug
-          driver-opts: image=moby/buildkit:latest
           platforms: linux/amd64
 
       # Login to DockerHub
