--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -341,8 +341,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          driver: docker-container # Use driver that supports cache export
-          driver-opts: image=moby/buildkit:latest # Specify BuildKit image
+          driver: docker-container
+          install: true
+          use: true
+          # Explicitly create a new builder instance
+          driver-opts: |
+            image=moby/buildkit:latest
+            network=host
 
       # Login to DockerHub
       - uses: docker/login-action@v3
@@ -365,10 +370,11 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:${{ github.sha }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache
-          # Simplified cache handling - Use registry cache
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache,mode=max
+          # Use local caching first, then registry as fallback
+          cache-from: |
+            type=gha
+            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache
+          cache-to: type=inline
           # Performance optimizations
           platforms: linux/amd64
           provenance: false
@@ -376,10 +382,7 @@ jobs:
           build-args: |
             PIP_NO_CACHE_DIR=1
             DOCKER_BUILDKIT=1
-          # Better builder output and defaults
-          builder: default
           # Important options to improve performance
-          pull: false # Already pulled separately
           no-cache: false
           load: false
         id: build
