--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,7 +92,7 @@ jobs:
     needs: [pre-cleanup]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y shellcheck
       - run: curl -sS https://webinstall.dev/shfmt | bash && echo "$HOME/.local/bin" >> $GITHUB_PATH
       - run: find scripts -name "*.sh" -exec shellcheck {} \;
@@ -103,22 +103,25 @@ jobs:
     needs: [pre-cleanup]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Fetch all history for better Git operations
           fetch-tags: true # Fetch all tags
+
       - name: Safety vulnerability scan
         uses: pyupio/safety-action@v1
         with:
           api-key: ${{ secrets.SAFETY_API_KEY }}
           args: --full-report
 
-      - uses: actions/setup-python@v4
+      # Setup Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: "3.12"
 
       - name: Cache Python venv
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
@@ -128,25 +131,27 @@ jobs:
       - run: python -m venv .venv && echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
       - run: .venv/bin/python -m pip install bandit
       - run: bandit -r src -c pyproject.toml -f json -o bandit.json
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v3
         with:
           name: bandit-results
           path: bandit.json
 
       # Trivy filesystem scan
       - name: Cache Trivy DB
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: ~/.cache/trivy
           key: trivy-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ format('{{yyyy-MM-dd}}', github.event.repository.updated_at) }}
           restore-keys: |
             trivy-cache-${{ github.workflow }}-${{ github.ref_name }}-
             trivy-cache-${{ github.workflow }}-
+
       - name: Install Trivy
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.48.3
           # Install jq for combining SARIF reports
           sudo apt-get update && sudo apt-get install -y jq
+
       - name: Run Trivy filesystem scan
         env:
           TRIVY_NO_PROGRESS: true
@@ -201,8 +206,9 @@ jobs:
             echo "No relevant directories changed, performing minimal scan"
             trivy fs --format sarif --output trivy-results.sarif --severity CRITICAL,HIGH --skip-dirs="tests/" --skip-dirs=".github/" .
           fi
+
       - name: Upload Trivy SARIF results
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: trivy-results.sarif
 
@@ -210,58 +216,66 @@ jobs:
     needs: [pre-cleanup]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: "3.12"
 
       - name: Cache Python venv
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
             venv-${{ runner.os }}-
 
-      - uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
-          cache-dependency-glob: "pyproject.toml"
-      - run: python -m venv .venv && echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
-      - run: uv pip install -e .[dev]
-      - run: ruff format src tests && ruff check src tests && mypy src tests
+      - uses: astral-sh/setup-uv@v4
+
+      - name: Initialize venv and install dev dependencies
+        run: |
+          python -m venv .venv
+          echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+          uv pip install -e .[dev]
+
+      - name: Run linting and type checking
+        run: |
+          ruff format src tests && ruff check src tests && mypy src tests
 
   test:
     needs: [pre-cleanup]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: "3.12"
 
       - name: Cache Python venv
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
             venv-${{ runner.os }}-
 
-      - uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
-          cache-dependency-glob: "pyproject.toml"
-      - run: python -m venv .venv && echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
-      - run: uv pip install pytest pytest-cov pytest-asyncio sentence-transformers chromadb -e .[dev]
+      - uses: astral-sh/setup-uv@v4
+
+      - name: Initialize venv and install test dependencies
+        run: |
+          python -m venv .venv
+          echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+          uv pip install pytest pytest-cov pytest-asyncio sentence-transformers chromadb -e .[dev]
+
       - name: Install Tesseract OCR
         run: |
           sudo apt-get update
           sudo apt-get install -y tesseract-ocr
           tesseract --version
+
       - name: Run tests with Rich progress display
         run: .github/scripts/test.sh -c -v
         timeout-minutes: 5
+
       # Add Codecov upload step
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -281,27 +295,30 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v3
         with:
           python-version: "${{ env.PYTHON_VERSION }}"
       - name: Cache Python venv
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
             venv-${{ runner.os }}-
 
-      - uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
-          cache-dependency-glob: "pyproject.toml"
-      - run: python -m venv .venv && echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
-      - run: uv pip install python-semantic-release
-      - env:
+      - uses: astral-sh/setup-uv@v4
+
+      - name: Initialize venv and install semantic-release
+        run: |
+          python -m venv .venv
+          echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+          uv pip install python-semantic-release
+
+      - name: Run semantic release
+        env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: .venv/bin/semantic-release publish
@@ -333,7 +350,7 @@ jobs:
           echo "Disk space after cleanup:"
           df -h
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1 # Shallow clone for faster checkout
 
@@ -350,7 +367,8 @@ jobs:
             network=host
 
       # Login to DockerHub
-      - uses: docker/login-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -406,7 +424,7 @@ jobs:
 
       # Trivy container scan
       - name: Cache Trivy DB
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: ~/.cache/trivy
           key: trivy-container-cache-${{ github.workflow }}-${{ github.ref_name }}-${{ hashFiles('Dockerfile') }}-${{ format('{{yyyy-MM-dd}}', github.event.repository.updated_at) }}
@@ -443,7 +461,7 @@ jobs:
 
       # Upload scan results
       - name: Upload Trivy scan results
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: trivy-results.sarif
           category: container-security
@@ -461,7 +479,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       # Check if Docker image exists
       - name: Check if Docker image exists
