--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,18 @@
 {
   "python.linting.enabled": true,
-  "python.linting.flake8Enabled": false,
   "python.linting.mypyEnabled": true,
+  "python.linting.flake8Enabled": false,
   "python.linting.pylintEnabled": false,
   "python.linting.pycodestyleEnabled": false,
-
-  "editor.formatOnSave": true,
-  "python.formatting.provider": "none",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.ruff": "explicit",
-    "source.organizeImports.ruff": "explicit"
-  },
+  "python.linting.pylspFlake8Enabled": false,
+  "pylsp.plugins.flake8.enabled": false,
 
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.fixAll": "explicit",
-      "source.organizeImports": "explicit"
+      "source.fixAll.ruff": true,
+      "source.organizeImports.ruff": true
     }
-  },
-
-  "python.linting.pylspFlake8Enabled": false,
-  "pylsp.plugins.flake8.enabled": false
+  }
 }
