--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -125,12 +125,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install actionlint
-        run: |
-          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
-          echo "$HOME/bin" >> $GITHUB_PATH
       - name: Run actionlint
-        run: actionlint -color
+        uses: reviewdog/action-actionlint@v1
 
   security:
     needs: [pre-cleanup]
